--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "mongodb": "^6.5.0"
+    "dotenv": "^16.4.5",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
+    "moongoose": "^0.0.5"
   }
 }
